<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BlackEel"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_heading"
            android:textAlignment="center"
            android:textColor="@color/LightBlueGreen"
            android:textSize="@dimen/headerTextSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textViewMarginTop"
            android:labelFor="@+id/usernameEntry"
            android:text="@string/userName"
            android:textColor="@color/TronBlue"
            android:textSize="@dimen/textSizeForLabels"
            android:textColorHint="@color/Verdigris"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/userNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/Verdigris"
            android:hint="@string/enterUserName"
            app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
            />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textViewMarginTop"
            android:labelFor="@+id/emailEntry"
            android:text="@string/email"
            android:textColor="@color/TronBlue"
            android:textSize="@dimen/textSizeForLabels"
            android:textColorHint="@color/Verdigris"
            app:layout_constraintTop_toBottomOf="@+id/userNameEt"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/Verdigris"
            android:hint="@string/enterEmail"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/numberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textViewMarginTop"
            android:labelFor="@+id/numberEntry"
            android:text="@string/number"
            android:textColor="@color/TronBlue"
            android:textSize="@dimen/textSizeForLabels"
            android:textColorHint="@color/Verdigris"
            app:layout_constraintTop_toBottomOf="@+id/emailEt"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/numberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/Verdigris"
            android:hint="@string/enterNumber"
            app:layout_constraintTop_toBottomOf="@+id/numberLabel"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/pinCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textViewMarginTop"
            android:labelFor="@+id/pinCodeEntry"
            android:text="@string/pinCode"
            android:textColor="@color/TronBlue"
            android:textSize="@dimen/textSizeForLabels"
            android:textColorHint="@color/Verdigris"
            app:layout_constraintTop_toBottomOf="@+id/numberEt"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/pinCodeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/Verdigris"
            android:hint="@string/enterPinCode"
            app:layout_constraintTop_toBottomOf="@+id/pinCodeLabel"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textViewMarginTop"
            android:labelFor="@+id/addressEntry"
            android:text="@string/address"
            android:textColor="@color/TronBlue"
            android:textSize="@dimen/textSizeForLabels"
            android:textColorHint="@color/Verdigris"
            app:layout_constraintTop_toBottomOf="@+id/pinCodeEt"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:inputType="textMultiLine"
            android:textColorHint="@color/Verdigris"
            android:textColor="@color/white"
            android:minLines="2"
            android:maxLines="5"
            android:hint="@string/enterAddress"
            app:layout_constraintTop_toBottomOf="@+id/addressLabel"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textSizeForLabels"
            android:labelFor="@+id/buttonEntry"
            android:text="@string/button"
            android:textAlignment="center"
            android:textColor="@color/BlackEel"
            android:textColorHint="@color/Verdigris"
            android:textSize="@dimen/textSizeForLabels"
            app:layout_constraintTop_toBottomOf="@id/addressEt"
            tools:ignore="MissingConstraints"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="userNameEt,emailEt,numberEt,pinCodeEt,addressEt" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:labelFor="@+id/buttonEntry"
            android:text="@string/cancelButton"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/BlackEel"
            android:textColorHint="@color/Verdigris"
            android:textSize="@dimen/textSizeForLabels"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/addressEt"
            />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:labelFor="@+id/buttonEntry"
            android:text="@string/confirmButton"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/BlackEel"
            android:textColorHint="@color/Verdigris"
            android:textSize="@dimen/textSizeForLabels"
            app:layout_constraintTop_toBottomOf="@+id/cancelButton"
            tools:ignore="MissingConstraints"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="cancelButton,confirmButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>